Fix: Context menu in now playing section was still overflowing slightly

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -934,7 +934,7 @@ progress+span {
 }
 
 .dialogContainer:has([data-id="editlyrics"]) {
-    top: -1em;
+    top: -1.75em;
 }
 
 .subtitleEditor-dropZone,
